# agential

./: .coverage.Chuongs-MacBook-Pro.local.91636.XlXLghPx  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .zshrc  CONTRIBUTING.md  Contribution.md  LICENSE  Makefile  README.md  codecov.yml  print_cwd.py  pyproject.toml  requirements-dev.txt  requirements.txt  tab.ipynb  temp.ipynb  test-1.ipynb  test.ipynb  test.py  test_environment.py  tmp.ipynb  tmp.txt  tmp_1.ipynb  webshop.ipynb
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml  general-question.yml  issue--🐛-bug-report.md
.github/workflows/: ci.yml  lint.yml  lint_and_tests.yml  test.yml
agential/: __init__.py  constants.py  manager.py  strategy_factory.py
agential/agents/: __init__.py  selector.py
agential/base/: __init__.py  agent.py  factory.py  selector.py  strategies.py
agential/benchmarks/: __init__.py  base.py
agential/cog/: constants.py  fewshot_factory.py  strategy_factory.py
agential/core/: __init__.py  llm.py
agential/eval/: classification.py  em.py
agential/fewshots/: fewshot_factory.py  hotpotqa.py  manager.py
agential/llm/: __init__.py  base.py  llm.py
agential/manager/: __init__.py  constants.py  fewshot_factory.py  fewshot_mapping.py  selector.py  strategy_factory.py  strategy_mapping.py
agential/prompting/: __init__.py  selector.py
agential/utils/: docstore.py  fetch.py  format.py  general.py  interpreter_api.py  metrics.py  parse.py  prompt.py  python_executor.py  validation.py
assets/osworld/: accessibility_tree.txt
data/ambignq/: README.md  dev_light.json  dev_light_s42_indices.pkl  main.ipynb  tmp.ipynb  train_light.json  train_light_s42_indices.pkl
data/fever/: README.md  main.ipynb  paper_dev_s42_indices.pkl  train_s42_indices.pkl
data/gsm8k/: README.md  main.ipynb  train_s42_indices.pkl
data/hotpotqa/: README.md  hotpot_dev_v1_simplified_s42_indices.pkl  hotpot_train_v1.1_simplified_s42_indices.pkl  main.ipynb  shuffle_data.py
data/humaneval/: README.md  main.ipynb
data/mbpp/: README.md  mbpp.ipynb  outputmbpp.txt
data/svamp/: README.md  svamp.ipynb
data/tabmwp/: README.md  main.ipynb  problems_train_s42_indices.pkl  tabmwp.ipynb
data/triviaqa/: README.md  main.ipynb  tmp.ipynb  triviaqa_s42_indices.pkl  triviaqa_train_s42_indices.pkl
discussion-agents/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
discussion-agents/docs/: Makefile  index.rst  make.bat
discussion-agents/notebooks/: extract.ipynb  extract_audio.ipynb  model1.ipynb
discussion-agents/src/models/: generative_agent.py  memory.py
discussion_agents/: __init__.py
discussion_agents/agent/: base.py  base_agent.py  generative_agent.py  generative_agents.py  tmp.ipynb
discussion_agents/cog/: __init__.py
discussion_agents/core/: __init__.py  base.py  memory.py
discussion_agents/memory/: base.py  base_memory.py  generative_agents.py
discussion_agents/model/: __init__.py  base_agent.py
discussion_agents/models/: generative_agent.py  memory.py
discussion_agents/planning/: __init__.py  generative_agent.py  generative_agents.py
discussion_agents/reflecting/: __init__.py  base.py  generative_agents.py
discussion_agents/scoring/: __init__.py  generative_agents.py
discussion_agents/utils/: __init__.py  chain.py  constants.py  fetch.py  format.py  general.py  parse.py
docs/: .gitignore  DOCS_README.md  conf.py  index.rst  mkdocs.yml  pyproject.toml  requirements.txt
docs/docs/: index.md
docs/docs/css/: extra.css
experiments/: cot.ipynb  critic.ipynb  lats.ipynb  qa.py  react.ipynb  requirements.txt  run_standard.sh  select_method.py  standard.ipynb  standard.py  tmp.ipynb  utils.py
experiments/analysis/: em_error_analysis_0.ipynb  em_error_analysis_1.ipynb  react_glamoroursriver_em_error_analysis.ipynb  react_max_step.ipynb  self_refine_.ipynb
experiments/clin/: ambignq.py  ambignq_train.py  fever.py  fever_train.py  gsm8k.py  gsm8k_train.py  hotpotqa.py  hotpotqa_train.py  humaneval.py  mbpp.py  mbpp_train.py  run.sh  svamp.py  svamp_train.py  tabmwp.py  tabmwp_train.py  triviaqa.py  triviaqa_train.py
experiments/cot/: ambignq.py  cot.ipynb  fever.py  gsm8k.py  hotpotqa.py  humaneval.py  mbpp.py  run.sh  svamp.py  tabmwp.py  triviaqa.py
experiments/critic/: ambignq.py  fever.py  gsm8k.py  hotpotqa.py  humaneval.py  mbpp.py  run.sh  svamp.py  tabmwp.py  triviaqa.py
experiments/expel/: ambignq.py  ambignq_train.py  fever.py  fever_train.py  gsm8k.py  gsm8k_train.py  hotpotqa.py  hotpotqa_train.py  humaneval.py  mbpp.py  mbpp_train.py  run.sh  svamp.py  tabmwp.py  tabmwp_train.py  tmp.ipynb  tmp.py  triviaqa.py  triviaqa_train.py
experiments/lats/: ambignq.py  fever.py  gsm8k.py  hotpotqa.py  humaneval.py  mbpp.py  run.sh  svamp.py  tabmwp.py  triviaqa.py
experiments/react/: ambignq.py  fever.py  gsm8k.py  hotpotqa.py  humaneval.py  mbpp.py  react.ipynb  run.sh  svamp.py  tabmwp.py  triviaqa.py
experiments/reflexion_cot/: ambignq.py  fever.py  gsm8k.py  hotpotqa.py  humaneval.py  mbpp.py  run.sh  svamp.py  tabmwp.py  triviaqa.py
experiments/reflexion_react/: ambignq.py  fever.py  gsm8k.py  hotpotqa.py  humaneval.py  mbpp.py  run.sh  svamp.py  tabmwp.py  triviaqa.py
experiments/self_refine/: ambignq.py  fever.py  gsm8k.py  hotpotqa.py  humaneval.py  mbpp.py  run.sh  self_refine.ipynb  svamp.py  tabmwp.py  triviaqa.py
experiments/standard/: ambignq.py  fever.py  gsm8k.py  hotpotqa.py  humaneval.py  mbpp.py  run.sh  standard.ipynb  svamp.py  tabmwp.py  (+1 more)
notebooks/: 2.0-vt-langchain-playground.ipynb  3.0-vt-test-langchain-gen-agents.ipynb  5.0-vt-test-planning.ipynb  6.0-vt-planning-gen-agents.ipynb  7.0-vt-test-imports.ipynb  8.0-getting-started-with-react-agent.ipynb  clin.ipynb  cot.ipynb  critic.ipynb  expel.ipynb  lats.ipynb  osworld.ipynb  react.ipynb  reflexion.ipynb  self_refine.ipynb  standard.ipynb  svamp.ipynb  tabmwp.ipynb  temp.ipynb
reports/: experiment_plans.excalidraw
tests/: __init__.py  conftest.py  test_strategy_factory.py
(+898 files in other folders)
