[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "src"
version = "0.1.0"
description = "Multi-agent discussion!"
authors = ["Vincent Tu <tuvincent0106@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alckasoc/discussion-agents"
keywords = ["packaging", "poetry", "multi-agent", "LLM"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.6.1"
cookiecutter = "^2.3.0"
openai = "^0.28.0"
tiktoken = "^0.5.1"
torch = "^2.0.1"
numpy = "^1.25.2"
langchain = "^0.0.291"
langchain-experimental = "^0.0.17"
faiss-cpu = "^1.7.4"
chromadb = "^0.4.10"
camel = {git = "https://github.com/camel-ai/camel.git", rev = "v0.1.0"}
pathlib2 = "^2.3.7.post1"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
python-dotenv = "^1.0.0"
black = "^23.9.1"
usort = "^1.0.7"
unimport = "^1.0.0"
ruff = "^0.0.289"
pydocstyle = "^6.3.0"

[tool.black]
line-length = 88
target-version = ["py310", "py311"]