[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
authors = ["Vincent Tu <tuvincent0106@gmail.com>"]
name = "docs"
version = "0.0.1"
readme = "DOCS_README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.19"
